2008-02-27  Jeremy Cribb <jcribb@email.unc.edu>
	- varforce_drive_gui.fig: recommitted bober's changes.  something woncky happened last time.

2008-02-26  Jeremy Cribb <jcribb@email.unc.edu>
	 - varforce_drive.m: added code changes by david bober that includes degauss routines specific for the high-throughput magnetics system.
	 - varforce_drive_gui.m: same.
	 - varforce_drive.gui.fig: same.
	 
2008-01-07  Jeremy Cribb <jcribb@email.unc.edu>
	- varforce_drive.m: added wake forest pole geometry.
	- varforce_drive_gui.fig: same.
	
2007-08-30  Jeremy Cribb <jcribb@email.unc.edu>
	- varforce_get_force.m: fixed typo.
	- varforce_remove_buffer_points.m: fixed an edge condition (when number of buffer points becomes zero).

2007-03-19  Jeremy Cribb <jcribb@email.unc.edu>
	- varforce_to_do.txt: updated list.
	- varforce_plot_sat_data: removed unnecessary plot.

2007-02-13  Jeremy Cribb <jcribb@email.unc.edu>
	- varforce_drive.m: added the comb geometry.
	- varforge_drive_GUI.fig: same.

2007-01-19  Ben Smith <jaminben@email.unc.edu>
	- varforce_compute_inst_force: changed all "PULSE" to "VOLTS" because it is a better description of the value.
	varforce_compute_linefit_force: same
	varforce_constants: same
	varforce_init: same
	varforce_remove_buffer_points: same
	varforce_remove_drift: same
	varforce_run: same

2006-12-11  Jeremy Cribb <jcribb@email.unc.edu>
	- varforce_drive_GUI: added.  GUI for running driving code.

	- varforce_drive: added.  driving code for varforce protocol.

	- varforce_constants: added.  script that creates column constants for varforce calibration data matrix.

	- varforce_run: added.  provides a sample function for running varforce calibration from the command line.  also useful in testing varforce code and developing additional analysis tools from the data.  very well commented to explain the protocol.  For now, the analysis GUI runs from this function.
    